<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strPlaceName" />

        <TextView
            android:id="@+id/txtDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strDescription" />

        <TextView
            android:id="@+id/txtEdo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strEstado" />

        <TextView
            android:id="@+id/txtLatitud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strLatitud" />

        <TextView
            android:id="@+id/txtLongitud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strLongitud" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>